# research_paper

./: .editorconfig  .gitignore  ANNOUNCEMENT.md  AUTOMOTIVE_CBS_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  INDUSTRY_DEPLOYMENT_GUIDE.md  LICENSE  PAPER_IMPROVEMENT_ROADMAP.md  PRESENTATION_SLIDES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  SECURITY.md  ULTIMATE_PROJECT_STATUS.md  check_release_readiness.py  compile_papers.bat  compile_papers.sh  deploy_to_github.py  docker-compose.yml  experimental_data.json  experimental_results.md  final_deployment_summary.py  generate_project_statistics.py  generate_real_test_data.py  index.html  ipatch-p8-deco-p10-enco (1).yaml  ipatch-p8-deco-p11-enco (1).yaml  ipatch-p9-deco-p11-enco.yaml  ipatch-vlan-set.yaml  paper_complete.tex  paper_english_final.tex  paper_korean_final.tex  paper_korean_improved.tex  paper_korean_perfect.tex  paper_latex.tex  (+10 more)
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pdf-generation.yml  performance-monitoring.yml
config/: README.md  cbs_multi_stream_config.yaml  ipatch-cbs-idle-slope.yaml
demo/: run_demo.bat  run_demo.sh  video_demo_script.py
docker/: Dockerfile
docs/: api_reference.rst  conf.py  getting_started.md  index.md  index.rst
docs/tutorials/: basic_usage.md
hardware/: lan9662_cbs_test.py  microchip_lan9692_interface.py
patents/: cbs_patent_application.md
results/: experiment_data.json
scripts/: README.md  quick_start.py  run_experiment.sh  send_video.sh  setup_sender.sh
src/: automotive_cbs_switch.py  cbs_calculator.py  config_validator.py  dashboard.py  data_analyzer.py  ml_optimizer.py  network_simulator.py  performance_benchmark.py  quantum_cbs_optimizer.py  traffic_generator.py
tests/: __init__.py  conftest.py  pytest.ini  test_automotive_cbs.py  test_cbs_calculator.py  test_complete_coverage.py  test_data_analyzer.py  test_traffic_generator.py
